client/app/center/center.css
/* ... */
.scroll-to-bottom-container:active {
  bottom: 63px;
}
.scroll-to-bottom-icon {
  font-size: 28px;
  color: #00abe6;
}


/********************************************

            HAS NEW MESSAGE

********************************************/
.has-new-msg-alert-container {
  position: absolute;
  left: 66px;
  right: 10px;
  bottom: 100%;
  height: 36px;
  background-color: rgba(94, 94, 94, 0.8);
  color: white;
  font-size: 16px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  padding-left: 14px;
}

.has-new-msg-alert-container:hover .has-new-msg-alert-container-text {
  text-decoration: underline;
}
.has-new-msg-alert-container-text {
  line-height: 36px;
}
.has-new-msg-alert-container-close {
  padding-top: 8px;
  padding-right: 8px;
  font-size: 18px;
  color: rgba(255,255,255,0.7);
}

.has-new-msg-alert-container-close:hover {
  color: white;
}

/********************************************

            ATTACH CONTENT

********************************************/
.attachment-content-wrapper {
  position: relative;
  padding-top: 5px;
  padding-bottom: 8px;
}
.attachment-content-wrapper .attachment-content-bar {
  display: table-cell;
  min-width: 4px;
  background-color: #d7e0e8;
}
.attachment-content-wrapper .attachment-content {
  display: table-cell;
  width: 100%;
  padding-left: 12px;
}

.attachment-content-wrapper .neighbor {
  display: -webkit-box;
  max-width: 100%;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.attachment-content-wrapper .social-image {
  position: relative;
  display: table-cell;
  float: left;
  margin-right: 12px;

  width: 110px;
  height: 110px;

  cursor: pointer;
  outline: 1px solid #e1e1e1;
  background-color: #000;
}

.attachment-content-wrapper .social-image>a {
  display: block;
  width: 100%;
  height: 100%;
}

.attachment-content-wrapper img {
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;

  max-width: 110px;
  max-height: 110px;
}

.attachment-content-wrapper .social-body {
  position: relative;
  display: table-cell;
  color: #333;
}

.attachment-content-wrapper .social-body.has-image {
  height: 110px;
}

.social-body a {
  text-decoration: none;
  color: #333;
}

.social-body .social-title {
  font-size: 16px;
  line-height: 22px;
  max-height: 42px;
  font-weight: 600;
  margin-bottom: 10px;
}

.social-body .social-desc {
  font-size: 13px;
  line-height: 18px;
  max-height: 36px;
}
.social-body .social-desc.has-domain {
  margin-bottom: 25px;
}

.social-body .social-domain {
  position: absolute;
  right: 0;
  bottom: -3px;
  left: 0;
  font-size: 12px;
  color: #999;
  overflow: hidden;
}

